Fix overflow

--- a/app/javascript/app/components/button/share-button/share-button-styles.scss
+++ b/app/javascript/app/components/button/share-button/share-button-styles.scss
@@ -18,7 +18,8 @@
 }
 
 .modal {
-  height: initial;
+  overflow: hidden;
+  height: 90%;
 
   @media #{$tablet-portrait} {
     height: 210px;
